--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "react-redux": "^7.2.4"
   },
   "devDependencies": {
+    "@types/node": "^15.6.1",
+    "@types/react": "^17.0.7",
     "autoprefixer": "^10.2.5",
     "postcss": "^8.3.0",
-    "tailwindcss": "^2.1.2"
+    "tailwindcss": "^2.1.2",
+    "typescript": "^4.2.4"
   }
 }
