--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "^10.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.4"
+    "react-redux": "^7.2.4",
+    "react-responsive-carousel": "^3.2.18"
   },
   "devDependencies": {
     "@types/node": "^15.6.1",
