--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-redux": "^7.1.16",
     "next": "^10.2.3",
     "react": "^17.0.2",
+    "react-currency-formatter": "^1.1.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-responsive-carousel": "^3.2.18"
