--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@heroicons/react": "^1.0.1",
+    "@tailwindcss/line-clamp": "^0.2.1",
     "@types/react-redux": "^7.1.16",
     "next": "^10.2.3",
     "react": "^17.0.2",
