--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "react-currency-formatter": "^1.1.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
-    "react-responsive-carousel": "^3.2.18"
+    "react-responsive-carousel": "^3.2.18",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "@types/node": "^15.6.1",
     "@types/react": "^17.0.7",
+    "@types/react-dom": "^17.0.5",
     "autoprefixer": "^10.2.5",
     "postcss": "^8.3.0",
     "tailwindcss": "^2.1.2",
