--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/line-clamp": "^0.2.1",
     "@types/react-redux": "^7.1.16",
     "next": "^10.2.3",
+    "next-auth": "^3.24.0",
     "react": "^17.0.2",
     "react-currency-formatter": "^1.1.0",
     "react-dom": "^17.0.2",
