set up firebase

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@heroicons/react": "^1.0.1",
     "@tailwindcss/line-clamp": "^0.2.1",
     "@types/react-redux": "^7.1.16",
+    "firebase": "^8.6.3",
     "next": "^10.2.3",
     "next-auth": "^3.24.0",
     "react": "^17.0.2",
