--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@heroicons/react": "^1.0.1",
+    "@reduxjs/toolkit": "^1.5.1",
     "@tailwindcss/line-clamp": "^0.2.1",
     "@types/react-redux": "^7.1.16",
     "firebase": "^8.6.3",
@@ -27,7 +28,7 @@
   },
   "devDependencies": {
     "@types/node": "^15.6.1",
-    "@types/react": "^17.0.7",
+    "@types/react": "^17.0.8",
     "@types/react-dom": "^17.0.5",
     "autoprefixer": "^10.2.5",
     "postcss": "^8.3.0",
