--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,12 +11,12 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
+    // "moduleResolution": "node",
+    // "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
     "noImplicitAny": false
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "*.ts", "*.tsx"],
   "exclude": ["node_modules"]
 }
