--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "dependencies": {
     "@heroicons/react": "^1.0.1",
     "@reduxjs/toolkit": "^1.5.1",
+    "@stripe/stripe-js": "^1.15.0",
     "@tailwindcss/line-clamp": "^0.2.1",
     "@types/react-redux": "^7.1.16",
+    "@types/stripe": "^8.0.417",
+    "axios": "^0.21.1",
     "firebase": "^8.6.3",
     "next": "^10.2.3",
     "next-auth": "^3.24.0",
@@ -24,6 +27,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-responsive-carousel": "^3.2.18",
+    "stripe": "^8.154.0",
     "yarn": "^1.22.10"
   },
   "devDependencies": {
