installed backend dependencies

--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@reduxjs/toolkit": "^1.5.1",
     "@stripe/stripe-js": "^1.15.0",
     "@tailwindcss/line-clamp": "^0.2.1",
+    "@types/micro": "^7.3.5",
     "@types/react-redux": "^7.1.16",
     "@types/stripe": "^8.0.417",
     "axios": "^0.21.1",
     "firebase": "^8.6.3",
+    "firebase-admin": "^9.9.0",
+    "micro": "^9.3.4",
     "next": "^10.2.3",
     "next-auth": "^3.24.0",
     "react": "^17.0.2",
