--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "firebase": "^8.6.3",
     "firebase-admin": "^9.9.0",
     "micro": "^9.3.4",
+    "moment": "^2.29.1",
     "next": "^10.2.3",
     "next-auth": "^3.24.0",
     "react": "^17.0.2",
